codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__slash_popup_ar.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"› /archive  archive the current chat and start a new one    "
"                                                            "
"› /ar                                                       "
"                                                            "
"                                         100% context left  "
